--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "orangehill/iseed": "^2.6",
+        "predis/predis": "^1.1",
         "tymon/jwt-auth": "1.*@rc"
     },
     "require-dev": {
