--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,15 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "barryvdh/laravel-ide-helper": "^2.4",
+        "doctrine/dbal": "^2.7",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "orangehill/iseed": "^2.6",
+        "overtrue/laravel-wechat": "~5.0",
         "predis/predis": "^1.1",
-        "tymon/jwt-auth": "1.*@rc",
-        "barryvdh/laravel-ide-helper": "^2.4",
-        "doctrine/dbal": "^2.7"
+        "tymon/jwt-auth": "1.*@rc"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
